--- a/src/patternfly/demos/NotificationDrawer/notification-drawer-demo.hbs
+++ b/src/patternfly/demos/NotificationDrawer/notification-drawer-demo.hbs
@@ -57,14 +57,14 @@
     {{#> drawer}}
       {{#> drawer-main}}
         {{#> drawer-content}}
-          {{#> page-main-list}}
+          {{#> page-main}}
             {{#> page-template-breadcrumb}}
             {{/page-template-breadcrumb}}
             {{#> page-template-title}}
             {{/page-template-title}}
             {{#> page-template-gallery}}
             {{/page-template-gallery}}
-          {{/page-main-list}}
+          {{/page-main}}
         {{/drawer-content}}
         {{#> drawer-panel drawer-panel--modifier="pf-m-width-33"}}
           {{#> drawer-body drawer-body--modifier="pf-m-no-padding"}}
@@ -77,14 +77,14 @@
     {{#> drawer}}
       {{#> drawer-main}}
         {{#> drawer-content}}
-          {{#> page-main-list}}
+          {{#> page-main}}
             {{#> page-template-breadcrumb}}
             {{/page-template-breadcrumb}}
             {{#> page-template-title}}
             {{/page-template-title}}
             {{#> page-template-gallery}}
             {{/page-template-gallery}}
-          {{/page-main-list}}
+          {{/page-main}}
         {{/drawer-content}}
         {{#> drawer-panel drawer-panel--modifier="pf-m-width-33"}}
           {{#> drawer-body drawer-body--modifier="pf-m-no-padding"}}
