--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -74,9 +74,9 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar--TranslateZ: 0;
   --#{$page}__sidebar--m-expanded--TranslateX: 0;
   --#{$page}__sidebar--xl--TranslateX: 0;
-  --#{$page}__sidebar--MarginRight: var(--pf-t--global--spacer--md); // TODO check this
-  --#{$page}__sidebar--PaddingBlockEnd: var(--pf-t--global--spacer--lg); // TODO check this
-  --#{$page}__sidebar--PaddingInlineStart: var(--pf-t--global--spacer--lg); // TODO check this
+  --#{$page}__sidebar--MarginRight: 0;
+  --#{$page}__sidebar--PaddingBlockEnd: var(--pf-t--global--spacer--lg);
+  --#{$page}__sidebar--PaddingInlineStart: var(--pf-t--global--spacer--lg);
 
 
   // Sidebar header
@@ -105,21 +105,22 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
   // Main
   --#{$page}__main--ZIndex: var(--#{$pf-global}--ZIndex--xs);
+  --#{$page}__main--MaxHeight: calc(100% - var(--pf-t--global--spacer--lg));
   --#{$page}__main--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$page}__main--MarginInlineStart: var(--pf-t--global--spacer--lg);
   --#{$page}__main--MarginInlineEnd: var(--pf-t--global--spacer--lg);
   --#{$page}__main--BorderRadius: var(--pf-t--global--border--radius--large);
-  --#{$page}__main--BorderWidth: var(--pf-t--global--border--width--300); // TODO
-  --#{$page}__main--BorderColor: var(--#{$page}__main--BackgroundColor); // Border should match the background to blend in
+  --#{$page}__main--BorderWidth: var(--pf-t--global--spacer--sm); // TODO Change to be a page outline token
+  --#{$page}__main--BorderColor: var(--#{$page}__main--BackgroundColor); // TODO Border should match the background to blend in - change to be a page outline token
 
   // Main section
   --#{$page}__main-section--MarginTop: var(--pf-t--global--spacer--md);
   --#{$page}__main-section--PaddingTop: var(--pf-t--global--spacer--lg);
-  --#{$page}__main-section--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-section--PaddingRight: calc(var(--pf-t--global--spacer--lg) - var(--#{$page}__main--BorderWidth)); // subtract the border of the main section
   --#{$page}__main-section--PaddingBottom: 0;
-  --#{$page}__main-section--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-section--PaddingLeft: calc(var(--pf-t--global--spacer--lg) - var(--#{$page}__main--BorderWidth)); // subtract the border of the main section
   --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$page}__main-section--BackgroundColor: var(--pf-t--global--background--color--primary--default); // TODO or transparent; ?
+  --#{$page}__main-section--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$page}__main-section--m-secondary--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}__main-breadcrumb--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
   --#{$page}__main-nav--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
@@ -159,10 +160,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 
   // Main section breadcrumb
-  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-t--global--spacer--lg);
-  --#{$page}__main-breadcrumb--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingRight: calc(var(--pf-t--global--spacer--lg) - var(--#{$page}__main--BorderWidth)); // subtract the border of the main section
   --#{$page}__main-breadcrumb--PaddingBottom: 0;
-  --#{$page}__main-breadcrumb--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingLeft: calc(var(--pf-t--global--spacer--lg) - var(--#{$page}__main--BorderWidth)); // subtract the border of the main section
   --#{$page}__main-breadcrumb--BackgroundColor: var(--pf-t--global--background--color--primary--default);
 
   // Main section tabs
@@ -496,11 +497,11 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // Main & Drawer
 .#{$page}__main {
   align-self: start;
-  max-height: 100%;
+  max-height: var(--#{$page}__main--MaxHeight);
   margin-block-start: 0;
   margin-inline-start: var(--#{$page}__main--MarginInlineStart);
   margin-inline-end: var(--#{$page}__main--MarginInlineEnd);
-  background: var(--#{$page}--#{$page}__main--BackgroundColor);
+  background: var(--#{$page}__main--BackgroundColor);
   border: var(--#{$page}__main--BorderWidth) solid var(--#{$page}__main--BorderColor);
   border-radius: var(--#{$page}__main--BorderRadius);
 }
