--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -297,3 +297,8 @@
 @include pf-v5-theme-dark {
   @include pf-v5-theme-dark-variables;
 }
+
+@import "./tokens/tokens-palette";
+@import "./tokens/tokens-default";
+@import "./tokens/tokens-font";
+@import "./tokens/tokens-dark";
